--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>嗨. 我是 <strong>JackZhang</strong>.</h1>
+								<h1>嗨. 我是 <strong>CN-JackZhang</strong>.</h1>
 							</header>
-							<p>欢迎来到 <strong>我的个人网站</strong>, 这是一个为计算机科学交流的平台。<a href="https://github.com/fujinan">我的github</a> ,<a href="https://weibo.com/u/5138807376/home/">我的微博</a> 和 <a href="https://space.bilibili.com/401795503">我的哔哩哔哩</a> 以及 <a href="https://www.zhihu.com/people/zhang-jie-72-82-24">我的知乎</a>.</p>
+							<p>欢迎来到 <strong>我的个人网站</strong>, 这是一个为计算机科学交流的平台。<a href="https://github.com/fujinan">我的github</a>，<a href="https://leetcode-cn.com/u/cn-jackzhang/">我的leetcode</a>，<a href="https://www.kaggle.com/cnjackzhang">我的kaggle</a> ,<a href="https://weibo.com/u/5138807376/home/">我的微博</a> 和 <a href="https://space.bilibili.com/401795503">我的哔哩哔哩</a> 以及 <a href="https://www.zhihu.com/people/zhang-jie-72-82-24">我的知乎</a>.</p>
 							<a href="#work" class="button large scrolly">学习一下我在做什么</a>
 						</div>
 					</div>
@@ -44,40 +44,36 @@
 				<div class="container">
 					<header>
 						<h2>这里是我做的所有工作.</h2>
-						<p>题目：删除最外层的括号</p>
-						<p>有效括号字符串为空 ("")、"(" + A + ")" 或 A + B，其中 A 和 B 都是有效的括号字符串，+ 代表字符串的连接。例如，""，"()"，"(())()" 和 "(()(()))" 都是有效的括号字符串。</p>
-						<p>如果有效字符串 S 非空，且不存在将其拆分为 S = A+B 的方法，我们称其为原语（primitive），其中 A 和 B 都是非空有效括号字符串。</p>
-						<p>给出一个非空有效字符串 S，考虑将其进行原语化分解，使得：S = P_1 + P_2 + ... + P_k，其中 P_i 是有效括号字符串原语。</p>
-						<p>对 S 进行原语化分解，删除分解中每个原语字符串的最外层括号，返回 S 。</p>
+						<p>分为：实战，记录，学习三个方面</p>
 	
-						<p>小结：主要是构造一个辅助栈，随着遍历，弹出左括号，利用栈是否为空，确定边际括号</p>
+						<p>我会在leetcode刷题，kaggle上大项目来实战；在github上记录我的思路，心得，想法和上传代码；在个学习平台上学习相关知识</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>实战</h3>
+								<p>在leetcode上刷题,在kaggle上打项目</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>记录</h3>
+								<p>在github上建立了leetcoode仓库和kaggle仓库用作代码记录，同时记录思路，心得感悟和总结.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>学习</h3>
+								<p>在kaggle上学习别人优秀的思路，高效的工具，以及多种处理问题的方法，在kaggle上和别人讨论，思想交流.在github上学习开源代码。在鲸和社区学习优秀国内项目。在bilibili上学习优秀资源。在知乎上学习前人经验。在leetcode上做题时学习别人优秀完成方法。</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p>想看看我最近做的事情吗?</p>
+						<a href="#portfolio" class="button large scrolly">看看我最近的做的事情</a>
 					</footer>
 				</div>
 			</article>
@@ -87,49 +83,50 @@
 				<div class="container">
 					<header>
 						<h2>这里是一些我最近正在做的事情.</h2>
-						<p>都是与计算机技术相关的事情.</p>
+						<p>刷leetcode，打kaggle项目，学习数据结构与算法，学习计算机操作系统，学习机器学习算法.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/picLLOGO.jpg" alt="" /></a>
-								<h3><a href="https://leetcode-cn.com/u/cn-jackzhang/">最近每天在刷leetcode</a></h3>
-								<p>每天刷10题，每刷一题都会在<a href="https://github.com/fujinan">我的github</a>上面上传我的代码与思路，还会做一个小结.</p>
+								<a href="https://leetcode-cn.com/u/cn-jackzhang/" class="image featured"><img src="images/piclogo.jpg" alt="" /></a>
+								<h3>最近每天在刷<a href="https://leetcode-cn.com/u/cn-jackzhang/">leetcode</a></h3>
+								<p>每天刷10题，每刷一题都会在<a href="https://github.com/fujinan/leetcode">我的github的leetcode仓库</a>上面上传我的代码与思路，还会做一个小结.目前已刷了13题。</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/fujinan" class="image featured"><img src="images/picgithub.jpg" alt="" /></a>
+								<h3>最近每天在上传代码到<a href="https://github.com/fujinan">我的github</a></h3>
+								<p>每天都会将代码上传到<a href="https://github.com/fujinan">我的github</a>上面保存.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://space.bilibili.com/401795503" class="image featured"><img src="images/picbili.jpg" alt="" /></a>
+								<h3><a href="https://space.bilibili.com/401795503">最近在bilibili学习计算机</a></h3>
+								<p>最近在bilibili上学习<a href="https://www.bilibili.com/video/BV1e4411s7Kw?from=search&seid=6898102616644678040">数据结构与算法python实现</a>和<a href="https://www.bilibili.com/video/BV18741137LS?from=search&seid=229884072581961106">计算机操作系统</a></p>
+								
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://www.kesci.com/home/user/profile/5fcf0c220949dd002c5f6518" class="image featured"><img src="images/picwhale.jpg" alt="" /></a>
+								<h3><a href="https://www.kesci.com/home/user/profile/5fcf0c220949dd002c5f6518">最近在参加和鲸社区的数据科学项目</a></h3>
+								<p>我比较感兴趣有<a href="https://space.bilibili.com/401795503">机器学习项目</a>，<a href="https://www.kesci.com/home/project">推荐系统相关项目</a>.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://www.kaggle.com/cnjackzhang" class="image featured"><img src="images/pickaggle.jpg" alt="" /></a>
+								<h3>最近在<a href="https://www.kaggle.com/cnjackzhang">kaggle</a>上打竞赛</h3>
+								<p>已完成了一些项目.有<a href="https://www.kaggle.com/c/house-prices-advanced-regression-techniques/leaderboard">房价预测</a>前37%，<a href="https://www.kaggle.com/c/titanic/leaderboard">泰坦尼克号</a>前49%，最近会多做一些回归类的项目比赛</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/piczhihu .jpg" alt="" /></a>
+								<h3><a href="#">最近在知乎上看一些行业最新理论，前沿知识</a></h3>
+								<p>主要有：机器学习，推荐算法.</p>
 							</article>
 						</div>
 					</div>
@@ -174,15 +171,15 @@
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>发现我在 ...</h3>
+							<h3>发现我在 ...( only have kaggle,github)</h3>
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="https://www.kaggle.com/cnjackzhang" class="icon brands fa-kaggle"><span class="label">Kaggle</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/fujinan" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
