--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>有什么东西可以联系我的吗.</h2>
-						<p>可以发送邮件与我联系.</p>
+						<h2>有什么东西可以联系我的吗?</h2>
+						<p>可以发送邮件与我联系.我的邮箱：2270576514@qq.com;微信：jzzj0926</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
